@@ -1,3 +1,7 @@
+2008-02-25	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Several fixes for non-working ratings at some installations
+
 2008-02-05	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Fixes for 'mode' TS parameter
